# RPO

./: README.md
lab1/fclient2/: settings.gradle
lab1/fclient2/app/: build.gradle
lab1/fclient2/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
lab1/fclient2/gradle/: libs.versions.toml
lab2/: .env.example  Dockerfile  docker-compose.yml  go.mod
lab2/cmd/server/: main.go
lab2/data/: app.db
lab2/docker/: start.sh
lab2/docs/: openapi.yaml
lab2/internal/config/: config.go
lab2/internal/http/: auth_handler.go  cards_handler.go  keys_handler.go  middleware.go  response.go  router.go  server.go  terminal_api_handler.go  terminals_handler.go  transactions_handler.go  users_handler.go
lab2/migrations/: 00001_init.sql
lab2/nginx/: nginx.conf
lab3/: .dockerignore  Dockerfile
lab3/backend/: go.mod
lab3/backend/migrations/: 00001_init.sql
lab3/certs/: server.crt  server.key
lab3/frontend/: package-lock.json
lab3/frontend/src/: App.jsx  main.jsx  style.css
lab3/nginx/: default.conf
lab3/scripts/: entrypoint.sh
lab4/: pubspec.yaml
lab4/android/app/: build.gradle.kts
lab4/ios/Runner/: Info.plist
lab4/ios/Runner.xcodeproj/: project.pbxproj
lab4/lib/: main.dart
lab4/lib/models/: card_data.dart
lab4/lib/pages/: nfc_admin_page.dart
lab4/lib/services/: api_client.dart  card_codec.dart  mifare_libnfc.dart  nfc_service.dart
lab4/linux/: CMakeLists.txt
lab4/linux/runner/: my_application.cc
lab4/macos/Runner.xcodeproj/: project.pbxproj
lab4/test/: widget_test.dart
lab4/web/: index.html  manifest.json
lab4/windows/: CMakeLists.txt
(+31 files in other folders)
